--- a/src/app/modules/admin/reports/annex-one/annex-one.component.html
+++ b/src/app/modules/admin/reports/annex-one/annex-one.component.html
@@ -19,7 +19,7 @@
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
 
-           
+
 
             <mat-form-field
             class="ml-4 fuse-mat-dense fuse-mat-rounded min-w-64"
@@ -50,7 +50,7 @@
         <div
             class="flex flex-col flex-auto overflow-hidden sm:mb-18 sm:overflow-y-auto"
         >
-        @if (conValor) {            
+        @if (conValor) {
             <div class="flex flex-col pt-6">
                 <div class="-m-1.5 overflow-x-auto">
                   <div class="p-1.5 min-w-full inline-block align-middle">
@@ -70,25 +70,17 @@
                           <tr>
                             <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">N°</th>
                             <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Cuenta</th>
-                            <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">IdFua</th>
-                            <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">FUA</th>
-                            <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">N° Afiliación</th>
-                            <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Paciente</th>
-                            <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Prestacion</th>
-                            <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Fecha Creación</th>
-                            <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Fecha Atención</th>
-                            <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Periodo</th>
-                            <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Auditor</th>
+
                           </tr>
                         </thead>
                         <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
                             @for (annex of annexes; track $index) {
                                 <tr>
                                     <td class="px-6 py-4 text-base font-medium text-gray-800 whitespace-nowrap dark:text-neutral-200">{{ $index + 1 }}</td>
-                                    <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{ annex.idepisodio }}</td>
+                                    <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{ annex.DATOS_DE_LA_ENTIDAD }}</td>
                                     <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{ annex.idfua }}</td>
                                     <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">
-                                        {{ annex.LFua }} - {{ annex.NFua }}                                
+                                        {{ annex.LFua }} - {{ annex.NFua }}
                                     </td>
                                     <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">
                                         {{ annex.IdDisaFormato }} - {{ annex.LoteFormato }} - {{ annex.NroFormato }}
@@ -106,7 +98,7 @@
                             } @empty {
                                 <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">No hay información</td>
                             }
-    
+
                         </tbody>
                       </table>
                     </div>
@@ -129,24 +121,24 @@
     >
         <div class="text-4xl font-extrabold tracking-tight">Anexo 01</div>
         <div class="flex items-center mt-6 shrink-0 sm:ml-4 sm:mt-0">
-        
+
             <mat-form-field
                 class="fuse-mat-dense fuse-mat-rounded min-w-64"
-                
+
             >
                 <mat-icon
                     class="icon-size-5"
                     matPrefix
-                    
+
                 ></mat-icon>
                 <input
                     matInput
-                   
+
                     [autocomplete]="'off'"
                     [placeholder]="'Search products'"
                 />
             </mat-form-field>
-            
+
             <button
                 class="ml-4"
                 mat-flat-button
