--- a/src/app/modules/admin/reports/liquidation/liquidation.component.html
+++ b/src/app/modules/admin/reports/liquidation/liquidation.component.html
@@ -12,7 +12,7 @@
             class="ml-4 fuse-mat-dense fuse-mat-rounded min-w-64"
             [subscriptSizing]="'dynamic'"
             >
-                <input matInput=""  placeholder="ID EPISODIO">
+                <input matInput="" id="idEpisodio" #idEpisodioInput placeholder="ID EPISODIO">
             </mat-form-field>
 
             <!-- Add product button -->
@@ -34,7 +34,7 @@
         <div
             class="flex flex-col flex-auto overflow-hidden sm:mb-18 sm:overflow-y-auto"
         >
-<!--        @if (conValor) {-->
+       @if (conValor) {
             <div class="flex flex-col pt-6">
                 <div class="-m-1.5 overflow-x-auto">
                   <div class="p-1.5 min-w-full inline-block align-middle">
@@ -53,34 +53,239 @@
                             </button>
                         </caption>
                         <thead>
+
                         <tr>
-                            <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Número de Formato</th>
+                            <th scope="col" colspan="3" class="px-6 py-3 font-medium text-white uppercase text-start bg-blue-600 w-full">DATOS DE LA ENTIDAD</th>
+                        </tr>
+                        <tr class="bg-gray-100">
+                            <th scope="col"  class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Número de Formato:</th>
                             <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Fecha Digitación</th>
+                            <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">IPRESS</th>
 
                         </tr>
 
                         </thead>
-                        <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-                            @for (annex of annexes; track $index) {
-                                <tr>
-                                    <td class="px-6 py-4 text-base font-medium text-gray-800 whitespace-nowrap dark:text-neutral-200">{{ $index + 1 }}</td>
-                                    <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{ annex.NFUA}}</td>
+                        <tbody>
 
+                        @if(annexes){
 
+                            @for (annex of annexes.DATOS_DE_LA_ENTIDAD; track $index) {
+
+                                <tr class="border-2 border-solid border-gray-300 border-t-0">
+                                    <td class="px-6 py-4 text-base font-medium text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Número de Formato"]}}</td>
+                                    <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Fecha Digitación"]}}</td>
+                                    <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["IPRESS"]}}</td>
                                 </tr>
-                            } @empty {
+                            }@empty {
                                 <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">No hay información</td>
                             }
+                        }@else {
+                            <div>No hay</div>
+                        }
+
+
+
+
 
                         </tbody>
+
+                          <thead>
+
+                          <tr>
+                              <th scope="col" colspan="4" class="px-6 py-3 font-medium text-white uppercase text-start bg-blue-600 w-full">DATOS DEL ASEGURADO</th>
+                          </tr>
+                          <tr class="bg-gray-100">
+                              <th scope="col"  class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Nombres</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">N° Historia</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Contrato</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Fecha de Atención</th>
+                          </tr>
+
+                          </thead>
+                          <tbody>
+
+                              @if(annexes){
+
+                                  @for (annex of annexes.DATOS_DEL_ASEGURADO; track $index) {
+
+                                      <tr class="border-2 border-solid border-gray-300 border-t-0">
+                                          <td class="px-6 py-4 text-base font-medium text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Nombres"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["N° Historia"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Contrato"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Fecha de Atención"]}}</td>
+                                      </tr>
+                                  }@empty {
+                                      <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">No hay información</td>
+                                  }
+                              }@else {
+                                  <div>No hay</div>
+                              }
+
+
+
+
+
+                          </tbody>
+
+                          <thead>
+
+                          <tr>
+                              <th scope="col" colspan="10" class="px-6 py-3 font-medium text-white uppercase text-start bg-blue-600 w-full">MEDICAMENTOS</th>
+                          </tr>
+                          <tr class="bg-gray-100">
+                              <th scope="col"  class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Codigo:</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Nombre</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">FF</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Concentracion</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Pres.</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Entr.</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Nro</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Dx.</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Precio</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Importe</th>
+                          </tr>
+
+                          </thead>
+                          <tbody>
+
+                              @if(annexes){
+
+                                  @for (annex of annexes.MEDICAMENTOS; track $index) {
+
+                                      <tr class="border-2 border-solid border-gray-300 border-t-0">
+                                          <td class="px-6 py-4 text-base font-medium text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Codigo"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Nombre"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["FF"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["concentracion"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Pres."]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Entr."]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Nro"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["FF"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Dx"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Precio"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Importe"]}}</td>
+                                      </tr>
+                                  }@empty {
+                                      <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">No hay información</td>
+                                  }
+                              }@else {
+                                  <div>No hay</div>
+                              }
+
+
+
+
+
+                          </tbody>
+
+
+                          <thead>
+
+                          <tr>
+                              <th scope="col" colspan="8" class="px-6 py-3 font-medium text-white uppercase text-start bg-blue-600 w-full">PROCEDIMIENTOS</th>
+                          </tr>
+                          <tr class="bg-gray-100">
+                              <th scope="col"  class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Código:</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Nombre</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Pres.</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Entr.</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">N°</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Dx</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Precio</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Importe</th>
+
+                          </tr>
+
+                          </thead>
+                          <tbody>
+
+                              @if(annexes){
+
+                                  @for (annex of annexes.PROCEDIMIENTOS; track $index) {
+
+                                      <tr class="border-2 border-solid border-gray-300 border-t-0">
+                                          <td class="px-6 py-4 text-base font-medium text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Código"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Nombre"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Pres."]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Entr."]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["N°"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Dx"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Precio"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Importe"]}}</td>
+                                      </tr>
+                                  }@empty {
+                                      <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">No hay información</td>
+                                  }
+                              }@else {
+                                  <div>No hay</div>
+                              }
+
+
+
+
+
+                          </tbody>
+
+
+                          <thead>
+
+                          <tr>
+                              <th scope="col" colspan="8" class="px-6 py-3 font-medium text-white uppercase text-start bg-blue-600 w-full">INSUMOS</th>
+                          </tr>
+                          <tr class="bg-gray-100">
+                              <th scope="col"  class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Código</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Nombre</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Pres.</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Entr.</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">N°</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Dx</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Precio</th>
+                              <th scope="col" class="px-6 py-3 font-medium text-gray-500 uppercase text-start dark:text-neutral-500">Importe</th>
+
+                          </tr>
+
+                          </thead>
+                          <tbody>
+
+                              @if(annexes){
+
+                                  @for (annex of annexes.INSUMOS; track $index) {
+
+                                      <tr class="border-2 border-solid border-gray-300 border-t-0">
+                                          <td class="px-6 py-4 text-base font-medium text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Código"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Nombre"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Pres."]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Entr."]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["N°"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Dx"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Precio"]}}</td>
+                                          <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">{{annex["Importe"]}}</td>
+                                      </tr>
+                                  }@empty {
+                                      <td class="px-6 py-4 text-base text-gray-800 whitespace-nowrap dark:text-neutral-200">No hay información</td>
+                                  }
+                              }@else {
+                                  <div>No hay</div>
+                              }
+
+
+
+
+
+                          </tbody>
+
+
+
+
+
                       </table>
                     </div>
                   </div>
                 </div>
             </div>
-<!--        } @else {-->
-<!--            <h4 class="mt-6 text-center">Ingrese los campos requeridos y procese</h4>-->
-<!--        }-->
+      } @else {
+            <h4 class="mt-6 text-center">Ingrese los campos requeridos y procese</h4>
+        }
         </div>
     </div>
 </div>
